# ai-auditor

./: .buildinfo  .dockerignore  .env.chat-local  .env.example  .env.local  .env.sample  .gitignore  .pre-commit-config.yaml  AI_CONNECTION_GUIDE.md  AI_TUNNEL_SETUP.md  AUDIT_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  CHAT_INSTRUCTIONS_ADDED.md  CHECKLIST.md  CLIENT_REQUIREMENTS_SPECIFICATION.md  CLOUDFLARE_DEPLOYMENT.md  Dockerfile  Dockerfile.ai  Dockerfile.gpu  Dockerfile.ui  E2E_VERIFICATION_REPORT.md  HOST_INSTRUCTIONS.md  HOST_VERIFICATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  NewGodGenerator  NewGodGenerator.pub  PRODUCTION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_Docker_Local.md  README_QuickStart.md  SECURITY_IMPLEMENTATION.md  SELF_AUDIT.md  STATUS_AI_CONNECTION.md  STREAMLIT_DEPLOYMENT.md  ai_audytor_wsad_wstepne_procedury.json  (+86 more)
.devcontainer/: devcontainer.json
.doctrees/: architektura.doctree  cookbook.doctree  environment.pickle  faq.doctree  index.doctree  quickstart.doctree  runbook.doctree  slownik.doctree
.logs/: analyze.out  be.pid  st.pid
.streamlit/: config.toml  secrets.toml
_sources/: cookbook.rst.txt  quickstart.rst.txt  slownik.rst.txt
_static/: custom.css
ai_audytor/: __init__.py
analysis/: hf_upload_summary.json  hf_verify.json
api/: server.py
app/: Chat.py  Home.py  Home.py.bak  __init__.py  backend.py  chat_local.py  chat_ui.py  decisions.py  demo_ui.py  local_llm.py  main.py  ui_charts.py  ui_nav.py  ui_upload.py  ui_utils.py
cli/: __init__.py  base.py  enrich_data.py  generate_risk_table.py  main.py  ocr_sample.py
client_package_4090/: PACKAGE_MANIFEST.json  README.md  README_CLIENT.md  install.sh  server.py  setup.py
core/: __init__.py  ai_assistant.py  audit_analytics.py  compliance_security.py  data_processing.py  evidence_zip.py  exceptions.py  export_final_xlsx.py  fuzzy_match.py  government_scraper.py  krs_integration.py  model_interface.py  ocr_etl.py  ocr_processor.py  payment_validation.py  pbc_portal.py  pdf_indexer.py  pl_integrations.py  pop_matcher.py  prompt_generator.py  risk_table_generator.py  rules.py  run_audit.py
deploy/: client_package_4090.py
docs/: ANYWHERE_FALLBACK.md  ANYWHERE_RESULTS.md  API.md  CONFIG.md  CONTEXT_FOR_CURSOR.md  DATA_HANDLING.md  DEPLOYMENT.md  FINETUNE.md  HF_MODEL.md  MISMATCH_TRIAGE.md  Makefile  OVERVIEW.md  PACKING.md  QUICKSTART.md  README.md  RUN_METADATA.md  USER_GUIDE.md  deployment_guide.md  requirements-docs.txt  setup_gpu.md  user_guide_non_technical.md  wstepne_procedury.md
inference/: main.py  model.py  prompt_generator.py  prompt_generator.py.save
local_test/: MANIFEST_PAKIETU.json  requirements.txt  server.py
mcp/: IMPLEMENTATION_SUMMARY.md  cursor-config.json  domain-mapping.md  rules-dictionary.md  runbook.md  security-policies.json  webhook-integration.md
moduly/: ai.html  walidacja.html
outputs/: demo_output.txt  report_fragment.txt
pages/: 01_Chat.py  02_AnalizaPOP.py  98_Diagnostyka.py  99_Pomoc.py  analysis.py  chat.py  diagnostics.py  fuzzy_match_demo.py  help.py  reports.py
prompts/: audytor_system.txt
scripts/: add_docker_and_ci.sh  anti_hang_self_audit.sh  audit_zip.sh  augment_ft.py  bootstrap_release_min.sh  build_docs.py  chat_local.py  chat_prompts.txt  ci_run_tests.sh  client_pack.sh  client_pack_final.sh  client_pack_min.sh  client_pack_simple.sh  diag_collect.sh  get_model.sh  (+88 more)
(+147 files in other folders)
