[project]
name = "ai-audytor"
version = "0.1.0"
description = "Lokalny system AI-audytu"
authors = [ { name = "EdSkamor" } ]
dependencies = []

[tool.pre-commit]
repos = [
  { repo = "https://github.com/psf/black", rev = "24.1.0", hooks = [{ id = "black" }] },
  { repo = "https://github.com/PyCQA/isort", rev = "6.0.0", hooks = [{ id = "isort" }] },
  { repo = "https://github.com/PyCQA/flake8", rev = "7.0.0", hooks = [{ id = "flake8" }] }
]
